[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/sprites/icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/rooms/room_template.gd" type="Script" id=2]

[node name="Room" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.87451, 0.372549, 0.372549, 1 )
scale = Vector2( 8, 8 )
texture = ExtResource( 1 )

[node name="AreaUp" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaUp"]

[node name="AreaRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaRight"]

[node name="AreaDown" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDown"]

[node name="AreaLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaLeft"]

[connection signal="mouse_entered" from="AreaUp" to="." method="_on_AreaUp_mouse_entered"]
[connection signal="mouse_exited" from="AreaUp" to="." method="_on_AreaUp_mouse_exited"]
[connection signal="mouse_entered" from="AreaRight" to="." method="_on_AreaRight_mouse_entered"]
[connection signal="mouse_exited" from="AreaRight" to="." method="_on_AreaRight_mouse_exited"]
[connection signal="mouse_entered" from="AreaDown" to="." method="_on_AreaDown_mouse_entered"]
[connection signal="mouse_exited" from="AreaDown" to="." method="_on_AreaDown_mouse_exited"]
[connection signal="mouse_entered" from="AreaLeft" to="." method="_on_AreaLeft_mouse_entered"]
[connection signal="mouse_exited" from="AreaLeft" to="." method="_on_AreaLeft_mouse_exited"]
